# DCA-Proyecto

./: .gitignore  CMakeLists.txt  DocumentaciónHito1.md  ProjectPrime8.flatpak  Proyecto.flatpak  README  README.md  com.sector8.ProjectPrime8.metainfo.xml  com.sector8.ProjectPrime8.yml  juego  makefile
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/com.sector8.ProjectPrime8/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-com.sector8.ProjectPrime8.yml/: build-ProjectPrime8  cleanup  finish  init
.flatpak-builder/cache/summaries/: 774cd30eb6bf948118c928aad71ac9b9f0a049a6196dc97d5ecf453e94bb50e2-40937c0714457c5d4b8226ec9b6d486b1397c3261e2788cc1cdcd4257c7a96c4.delta  dafc3863a733f8024bb010b537040a6bd9b9c6d465694ac87597e1b9a061b048-40937c0714457c5d4b8226ec9b6d486b1397c3261e2788cc1cdcd4257c7a96c4.delta  eba05ab8912320d16771772103d086c0a88f1977817f575d205933906bb830ca-40937c0714457c5d4b8226ec9b6d486b1397c3261e2788cc1cdcd4257c7a96c4.delta
.flatpak-builder/checksums/: x86_64-com.sector8.ProjectPrime8.yml
dist-flatpak/: summary  summary.idx
dist-flatpak/refs/heads/app/com.sector8.ProjectPrime8/x86_64/: master
dist-flatpak/summaries/: 3b8a1c0d898fb46bb1d03626a0dd1ba7d56031778fbdd14960641d8a74a1088a-06be050f930c69d4b10747f4fc80bb504bda76b56357f9465a55144c8cf926d7.delta
doc/: Bugtracking.md  GDD.md  GestionRamas.md  Hito2_entregable1.md
pack-build/: metadata  metadata.debuginfo
src/: GameOverState.cpp  MainGameState.cpp  MainMenuState.cpp  main.cpp
src/core/: main.cpp
src/states/: GameOverState.cpp  MainGameState.cpp  MainMenuState.cpp  ResourceManager.cpp
(+1 files in other folders)
